--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             document.getElementById('booking-msg').style.display = "block";
             document.getElementById('fclass-msg').textContent = getInputValue('fclass');
             document.getElementById('eclass-msg').textContent = getInputValue('economy');
-            document.getElementById('total-msg').textContent = document.getElementById('total').innerText + ' (Inc. 10% Charge)';
+            document.getElementById('total-msg').textContent = document.getElementById('total').innerText + ' (Inc. 10% VAT)';
         }
 
     </script>
